# openEats

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
data/: ingredients.csv  tags.csv
ingredient/: models.py  urls.py  views.py
ingredient/management/commands/: ing_import.py
ingredient/migrations/: 0001_initial.py  0002_alter_ingredient_recipe.py
ingredient/tests/: test_ing_api.py
openeats/: asgi.py  fixtures.py  main_models.py  settings.py  urls.py  wsgi.py
recipe/: admin.py  apps.py  filters.py  managers.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
recipe/management/commands/: ing_import.py  tag_import.py
recipe/migrations/: 0001_initial.py  0002_ingredient_unique_ingredient_upper_name_and_more.py  0002_tag_ingredient.py  0003_applicationconfiguration.py  0003_remove_ingredient_unique_ingredient_upper_name_and_more.py  0004_delete_applicationconfiguration_and_more.py  0005_remove_ingredient_recipe_remove_tag_recipe_and_more.py  0006_alter_recipe_ingredient_alter_recipe_tag.py
recipe/tests/: fixtures.py  search_test.py  test_ing_api.py  test_recipe_api.py  test_tag_api.py
tag/: models.py  serializers.py  urls.py  views.py
tag/management/commands/: tag_import.py
tag/migrations/: 0001_initial.py  0002_alter_tag_recipe.py
tag/tests/: test_tag_api.py
